--- a/Microsoft.Toolkit.Uwp.SampleApp/Pages/About.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Pages/About.xaml
@@ -1,66 +1,87 @@
-﻿<Page
-    x:Class="Microsoft.Toolkit.Uwp.SampleApp.Pages.About"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+﻿<Page x:Class="Microsoft.Toolkit.Uwp.SampleApp.Pages.About"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d">
 
-    <Grid Background="{StaticResource Brush-Grey-05}">
-        <ScrollViewer VerticalScrollBarVisibility="Auto">
-            <StackPanel HorizontalAlignment="Center" Margin="0,36,0,0">
-                <TextBlock Text="UWP Community Toolkit Sample App" FontSize="36" Foreground="{StaticResource Brush-Grey-03}" FontWeight="Light" HorizontalAlignment="Center" TextWrapping="WrapWholeWords" TextAlignment="Center" Margin="12,0"/>
-                <TextBlock x:Name="Version" TextAlignment="Center" Margin="0,0,0,24"/>
-                <TextBlock MaxWidth="500" TextAlignment="Center" TextWrapping="WrapWholeWords" Text="This app demonstrates the controls, services and APIs available in the UWP Community Toolkit. The toolkit is available as NuGet package for your C# or VB.NET projects. Source code of the toolkit and the sample app is available on GitHub." Margin="12,0,12,12"/>
+  <Grid Background="{StaticResource Brush-Grey-05}">
+    <ScrollViewer VerticalScrollBarVisibility="Auto">
+      <StackPanel Margin="0,36,0,0"
+                  HorizontalAlignment="Center">
+        <TextBlock Margin="12,0"
+                   HorizontalAlignment="Center"
+                   FontSize="36"
+                   FontWeight="Light"
+                   Foreground="{StaticResource Brush-Grey-03}"
+                   Text="UWP Community Toolkit Sample App"
+                   TextAlignment="Center"
+                   TextWrapping="WrapWholeWords" />
+        <TextBlock x:Name="Version"
+                   Margin="0,0,0,24"
+                   TextAlignment="Center" />
+        <TextBlock MaxWidth="500"
+                   Margin="12,0,12,12"
+                   Text="This app demonstrates the controls, services and APIs available in the UWP Community Toolkit. The toolkit is available as NuGet package for your C# or VB.NET projects. Source code of the toolkit and the sample app is available on GitHub."
+                   TextAlignment="Center"
+                   TextWrapping="WrapWholeWords" />
 
-                <TextBlock Text="UWP Community Toolkit and Sample App code" TextAlignment="Center" FontWeight="SemiBold" FontSize="16" TextWrapping="Wrap"/>
-                <HyperlinkButton HorizontalAlignment="Center"
-                            FontWeight="Light"
-                            Foreground="{StaticResource Brush-Blue-01}"
-                            NavigateUri="http://aka.ms/uwptoolkit"
-                            FontSize="14" Margin="0,0,0,12">
-                    Github repository
-                </HyperlinkButton>
-                
-                <TextBlock Text="Documentation" TextAlignment="Center" FontWeight="SemiBold" FontSize="16"/>
-                <HyperlinkButton
-                            HorizontalAlignment="Center"
-                            FontWeight="Light"
-                            Foreground="{StaticResource Brush-Blue-01}"
-                            NavigateUri="http://aka.ms/uwptoolkitdocs"
-                            FontSize="14" Margin="0,0,0,12">
-                    Documentation homepage
-                </HyperlinkButton>
+        <TextBlock FontSize="16"
+                   FontWeight="SemiBold"
+                   Text="UWP Community Toolkit and Sample App code"
+                   TextAlignment="Center"
+                   TextWrapping="Wrap" />
+        <HyperlinkButton Margin="0,0,0,12"
+                         HorizontalAlignment="Center"
+                         FontSize="14"
+                         FontWeight="Light"
+                         Foreground="{StaticResource Brush-Blue-01}"
+                         NavigateUri="http://aka.ms/uwptoolkit">
+          Github repository
+        </HyperlinkButton>
 
-                <TextBlock Text="Dependencies" TextAlignment="Center" FontWeight="SemiBold" FontSize="16"/>
-                <HyperlinkButton
-                            HorizontalAlignment="Center"
-                            FontWeight="Light"
-                            Foreground="{StaticResource Brush-Blue-01}"
-                            NavigateUri="http://www.newtonsoft.com/json"
-                            FontSize="14">
-                    Newtonsoft Json
-                </HyperlinkButton>
-                <HyperlinkButton
-                            HorizontalAlignment="Center"
-                            FontWeight="Light"
-                            Foreground="{StaticResource Brush-Blue-01}"
-                            NavigateUri="https://github.com/google/code-prettify"
-                            FontSize="14">
-                    Code Prettify
-                </HyperlinkButton>
-                
-                <HyperlinkButton
-                            Margin="0,30,0,0"
-                            HorizontalAlignment="Center"
-                            FontWeight="Light"
-                            Foreground="{StaticResource Brush-Blue-01}"
-                            NavigateUri="https://go.microsoft.com/fwlink/?LinkId=521839"
-                            FontSize="14">
-                    Privacy statement
-                </HyperlinkButton>
-            </StackPanel>
-        </ScrollViewer>
-    </Grid>
+        <TextBlock FontSize="16"
+                   FontWeight="SemiBold"
+                   Text="Documentation"
+                   TextAlignment="Center" />
+        <HyperlinkButton Margin="0,0,0,12"
+                         HorizontalAlignment="Center"
+                         FontSize="14"
+                         FontWeight="Light"
+                         Foreground="{StaticResource Brush-Blue-01}"
+                         NavigateUri="http://aka.ms/uwptoolkitdocs">
+          Documentation homepage
+        </HyperlinkButton>
+
+        <TextBlock FontSize="16"
+                   FontWeight="SemiBold"
+                   Text="Dependencies"
+                   TextAlignment="Center" />
+        <HyperlinkButton HorizontalAlignment="Center"
+                         FontSize="14"
+                         FontWeight="Light"
+                         Foreground="{StaticResource Brush-Blue-01}"
+                         NavigateUri="http://www.newtonsoft.com/json">
+          Newtonsoft Json
+        </HyperlinkButton>
+        <HyperlinkButton HorizontalAlignment="Center"
+                         FontSize="14"
+                         FontWeight="Light"
+                         Foreground="{StaticResource Brush-Blue-01}"
+                         NavigateUri="https://github.com/google/code-prettify">
+          Code Prettify
+        </HyperlinkButton>
+
+        <HyperlinkButton Margin="0,30,0,0"
+                         HorizontalAlignment="Center"
+                         FontSize="14"
+                         FontWeight="Light"
+                         Foreground="{StaticResource Brush-Blue-01}"
+                         NavigateUri="https://go.microsoft.com/fwlink/?LinkId=521839">
+          Privacy statement
+        </HyperlinkButton>
+      </StackPanel>
+    </ScrollViewer>
+  </Grid>
 </Page>
- 
+
