--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/BackgroundTaskHelper/BackgroundTaskHelperPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/BackgroundTaskHelper/BackgroundTaskHelperPage.xaml
@@ -1,46 +1,53 @@
-﻿<Page
-    x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.BackgroundTaskHelperPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+﻿<Page x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.BackgroundTaskHelperPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d">
 
-    <Grid Background="{StaticResource Brush-Grey-05}">
+  <Grid Background="{StaticResource Brush-Grey-05}">
+    <StackPanel VerticalAlignment="Top">
 
-        <VisualStateManager.VisualStateGroups>
-            <VisualStateGroup>
-                <VisualState x:Name="Full">
-                    <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="600" />
-                    </VisualState.StateTriggers>
-                </VisualState>
-                <VisualState x:Name="Small">
-                    <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="0" />
-                    </VisualState.StateTriggers>
+      <TextBlock Margin="5"
+                 Foreground="Red"
+                 Text="WARNING: Register Button only works on Anniversary Update (&gt;= 14393)"
+                 TextWrapping="Wrap" />
 
-                    <VisualState.Setters>
-                        <Setter Target="ButtonsPanel.Orientation" Value="Vertical" />
-                    </VisualState.Setters>
-                </VisualState>
-            </VisualStateGroup>
-        </VisualStateManager.VisualStateGroups>
+      <StackPanel Margin="5"
+                  Orientation="Horizontal">
+        <TextBlock Text="Status:" />
+        <TextBlock x:Name="StatusMessage" />
+      </StackPanel>
 
-        <StackPanel VerticalAlignment="Top">
+      <Button x:Name="RegisterButton"
+              Margin="5"
+              Click="RegisterButton_Click"
+              Content="Register Background Task" />
 
-            <TextBlock Foreground="Red" Text="WARNING: Register Button only works on Anniversary Update (>= 14393)" Margin="5" TextWrapping="Wrap"></TextBlock>
-            
-            <StackPanel Orientation="Horizontal" Margin="5">
-                <TextBlock Text="Status:"></TextBlock>
-                <TextBlock x:Name="StatusMessage"></TextBlock>
-            </StackPanel>
+      <Button x:Name="UnregisterButton"
+              Margin="5"
+              Click="UnregisterButton_Click"
+              Content="Unregister Background Task" />
+    </StackPanel>
 
-            <Button x:Name="RegisterButton" Content="Register Background Task" Margin="5" Click="RegisterButton_Click"></Button>
+    <VisualStateManager.VisualStateGroups>
+      <VisualStateGroup>
+        <VisualState x:Name="Full">
+          <VisualState.StateTriggers>
+            <AdaptiveTrigger MinWindowWidth="600" />
+          </VisualState.StateTriggers>
+        </VisualState>
+        <VisualState x:Name="Small">
+          <VisualState.StateTriggers>
+            <AdaptiveTrigger MinWindowWidth="0" />
+          </VisualState.StateTriggers>
 
-            <Button x:Name="UnregisterButton" Content="Unregister Background Task" Margin="5" Click="UnregisterButton_Click"></Button>
-        </StackPanel>
-        
-    </Grid>
+          <VisualState.Setters>
+            <Setter Target="ButtonsPanel.Orientation" Value="Vertical" />
+          </VisualState.Setters>
+        </VisualState>
+      </VisualStateGroup>
+    </VisualStateManager.VisualStateGroups>
+  </Grid>
 </Page>
