--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Bing Service/BingPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Bing Service/BingPage.xaml
@@ -1,50 +1,82 @@
-﻿<Page
-    x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.BingPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:bing="using:Microsoft.Toolkit.Uwp.Services.Bing"
-    mc:Ignorable="d">
-    <Page.Resources>
-        <DataTemplate x:Key="BingSchemaTemplate" x:DataType="bing:BingResult">
-            <Grid Margin="0,5,10,5">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition Width="Auto"></ColumnDefinition>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                </Grid.RowDefinitions>
-                <TextBlock Text="{x:Bind Title}" Grid.Row="0" Grid.Column="0" FontWeight="Bold" TextTrimming="CharacterEllipsis"></TextBlock>
-                <TextBlock Text="{x:Bind Published}" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Right"></TextBlock>
-                <TextBlock Text="{x:Bind Summary}" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" TextWrapping="Wrap"></TextBlock>
-                <HyperlinkButton Content="{x:Bind Link}" NavigateUri="{x:Bind Link}" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"></HyperlinkButton>
-            </Grid>
-        </DataTemplate>
-    </Page.Resources>
-
-    <Grid Background="{StaticResource Brush-Grey-05}">
+﻿<Page x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.BingPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:bing="using:Microsoft.Toolkit.Uwp.Services.Bing"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d">
+  <Page.Resources>
+    <DataTemplate x:Key="BingSchemaTemplate"
+                  x:DataType="bing:BingResult">
+      <Grid Margin="0,5,10,5">
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition />
+          <ColumnDefinition Width="Auto" />
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition></RowDefinition>
+          <RowDefinition />
+          <RowDefinition />
+          <RowDefinition />
         </Grid.RowDefinitions>
-        <StackPanel Orientation="Vertical" Margin="10">
-            <TextBox Header="Request:" x:Name="SearchText" Text="UWP"></TextBox>
-            <ComboBox x:Name="Countries" Header="Country:" HorizontalAlignment="Stretch" Margin="0,10,0,0"></ComboBox>
-            <ComboBox x:Name="Languages" Header="Language:" HorizontalAlignment="Stretch" Margin="0,10,0,0"></ComboBox>
-            <ComboBox x:Name="QueryType" Header="Type:" HorizontalAlignment="Stretch" Margin="0,10,0,0"></ComboBox>
-            <Button Content="Search" x:Name="SearchButton" Click="SearchButton_OnClick" Margin="0,10,0,0"></Button>
-        </StackPanel>
-        <ListView Grid.Row="1" ItemTemplate="{StaticResource BingSchemaTemplate}" x:Name="ListView">
-            <ListView.ItemContainerStyle>
-                <Style TargetType="ListViewItem">
-                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                </Style>
-            </ListView.ItemContainerStyle>
-        </ListView>
-    </Grid>
+        <TextBlock Grid.Row="0"
+                   Grid.Column="0"
+                   FontWeight="Bold"
+                   Text="{x:Bind Title}"
+                   TextTrimming="CharacterEllipsis" />
+        <TextBlock Grid.Row="0"
+                   Grid.Column="1"
+                   HorizontalAlignment="Right"
+                   Text="{x:Bind Published}" />
+        <TextBlock Grid.Row="1"
+                   Grid.Column="0"
+                   Grid.ColumnSpan="2"
+                   Text="{x:Bind Summary}"
+                   TextWrapping="Wrap" />
+        <HyperlinkButton Grid.Row="2"
+                         Grid.Column="0"
+                         Grid.ColumnSpan="2"
+                         Content="{x:Bind Link}"
+                         NavigateUri="{x:Bind Link}" />
+      </Grid>
+    </DataTemplate>
+  </Page.Resources>
+
+  <Grid Background="{StaticResource Brush-Grey-05}">
+    <Grid.RowDefinitions>
+      <RowDefinition Height="Auto" />
+      <RowDefinition />
+    </Grid.RowDefinitions>
+    <StackPanel Margin="10"
+                Orientation="Vertical">
+      <TextBox x:Name="SearchText"
+               Header="Request:"
+               Text="UWP" />
+      <ComboBox x:Name="Countries"
+                Margin="0,10,0,0"
+                HorizontalAlignment="Stretch"
+                Header="Country:" />
+      <ComboBox x:Name="Languages"
+                Margin="0,10,0,0"
+                HorizontalAlignment="Stretch"
+                Header="Language:" />
+      <ComboBox x:Name="QueryType"
+                Margin="0,10,0,0"
+                HorizontalAlignment="Stretch"
+                Header="Type:" />
+      <Button x:Name="SearchButton"
+              Margin="0,10,0,0"
+              Click="SearchButton_OnClick"
+              Content="Search" />
+    </StackPanel>
+    <ListView x:Name="ListView"
+              Grid.Row="1"
+              ItemTemplate="{StaticResource BingSchemaTemplate}">
+      <ListView.ItemContainerStyle>
+        <Style TargetType="ListViewItem">
+          <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+        </Style>
+      </ListView.ItemContainerStyle>
+    </ListView>
+  </Grid>
 </Page>
- 
+
