--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/GridSplitter/GridSplitterPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/GridSplitter/GridSplitterPage.xaml
@@ -1,160 +1,154 @@
-﻿<Page
-    x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.GridSplitterPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
-    mc:Ignorable="d">
+﻿<Page x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.GridSplitterPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d">
 
 
-    <Grid x:Name="RootGrid"
-          Background="{StaticResource Brush-Grey-05}" 
-          Padding="48">
-        <VisualStateManager.VisualStateGroups>
-            <VisualStateGroup>
-                <VisualState x:Name="Full">
-                    <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="600" />
-                    </VisualState.StateTriggers>
-                </VisualState>
-                <VisualState x:Name="Small">
-                    <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="0" />
-                    </VisualState.StateTriggers>
+  <Grid x:Name="RootGrid"
+        Padding="48"
+        Background="{StaticResource Brush-Grey-05}">
+    <Grid.RowDefinitions>
+      <RowDefinition MinHeight="100" />
+      <RowDefinition Height="11" />
+      <RowDefinition />
+      <RowDefinition Height="200" />
+    </Grid.RowDefinitions>
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition />
+      <ColumnDefinition />
+      <ColumnDefinition />
+    </Grid.ColumnDefinitions>
 
-                    <VisualState.Setters>
-                        <Setter Target="RootGrid.Padding" Value="12" />
-                        <Setter Target="RootGrid.FontSize" Value="12" />
-                    </VisualState.Setters>
-                </VisualState>
-            </VisualStateGroup>
-        </VisualStateManager.VisualStateGroups>
-        <Grid.RowDefinitions>
-            <RowDefinition MinHeight="100"></RowDefinition>
-            <RowDefinition Height="11"></RowDefinition>
-            <RowDefinition />
-            <RowDefinition Height="200"></RowDefinition>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-        </Grid.ColumnDefinitions>
+    <Rectangle Grid.Row="0"
+               Grid.Column="0"
+               Fill="{StaticResource Brush-White}"
+               Stroke="{StaticResource Brush-Grey-04}"
+               StrokeThickness="1" />
+    <Rectangle Grid.Row="0"
+               Grid.Column="1"
+               Fill="{StaticResource Brush-White}"
+               Stroke="{StaticResource Brush-Grey-04}"
+               StrokeThickness="1" />
+    <Rectangle Grid.Row="0"
+               Grid.Column="2"
+               Fill="{StaticResource Brush-White}"
+               Stroke="{StaticResource Brush-Grey-04}"
+               StrokeThickness="1" />
+    <Rectangle Grid.Row="2"
+               Grid.Column="0"
+               Fill="{StaticResource Brush-White}"
+               Stroke="{StaticResource Brush-Grey-04}"
+               StrokeThickness="1" />
+    <Rectangle Grid.Row="2"
+               Grid.Column="1"
+               Fill="{StaticResource Brush-White}"
+               Stroke="{StaticResource Brush-Grey-04}"
+               StrokeThickness="1" />
+    <Rectangle Grid.Row="2"
+               Grid.Column="2"
+               Fill="{StaticResource Brush-White}"
+               Stroke="{StaticResource Brush-Grey-04}"
+               StrokeThickness="1" />
 
-        <Rectangle Grid.Column="0" 
-                   Grid.Row="0" 
-                   Fill="{StaticResource Brush-White}" 
-                   Stroke="{StaticResource Brush-Grey-04}" 
-                   StrokeThickness="1"/>
-        <Rectangle Grid.Column="1" 
-                   Grid.Row="0" 
-                   Fill="{StaticResource Brush-White}" 
-                   Stroke="{StaticResource Brush-Grey-04}"
-                   StrokeThickness="1"/>
-        <Rectangle Grid.Column="2" 
-                   Grid.Row="0" 
-                   Fill="{StaticResource Brush-White}" 
-                   Stroke="{StaticResource Brush-Grey-04}" 
-                   StrokeThickness="1"/>
-        <Rectangle Grid.Column="0" 
-                   Grid.Row="2" 
-                   Fill="{StaticResource Brush-White}" 
-                   Stroke="{StaticResource Brush-Grey-04}" 
-                   StrokeThickness="1"/>
-        <Rectangle Grid.Column="1" 
-                   Grid.Row="2" 
-                   Fill="{StaticResource Brush-White}" 
-                   Stroke="{StaticResource Brush-Grey-04}" 
-                   StrokeThickness="1"/>
-        <Rectangle Grid.Column="2" 
-                   Grid.Row="2" 
-                   Fill="{StaticResource Brush-White}" 
-                   Stroke="{StaticResource Brush-Grey-04}" 
-                   StrokeThickness="1"/>
-        
-        <Rectangle Grid.Column="0" 
-                   Grid.Row="3" 
-                   Fill="{StaticResource Brush-White}" 
-                   Stroke="{StaticResource Brush-Grey-04}" 
-                   StrokeThickness="1"/>
-        <Rectangle Grid.Column="1" 
-                   Grid.Row="3" 
-                   Fill="{StaticResource Brush-White}" 
-                   Stroke="{StaticResource Brush-Grey-04}" 
-                   StrokeThickness="1"/>
-        <Rectangle Grid.Column="2" 
-                   Grid.Row="3" 
-                   Fill="{StaticResource Brush-White}" 
-                   Stroke="{StaticResource Brush-Grey-04}" 
-                   StrokeThickness="1"/>
+    <Rectangle Grid.Row="3"
+               Grid.Column="0"
+               Fill="{StaticResource Brush-White}"
+               Stroke="{StaticResource Brush-Grey-04}"
+               StrokeThickness="1" />
+    <Rectangle Grid.Row="3"
+               Grid.Column="1"
+               Fill="{StaticResource Brush-White}"
+               Stroke="{StaticResource Brush-Grey-04}"
+               StrokeThickness="1" />
+    <Rectangle Grid.Row="3"
+               Grid.Column="2"
+               Fill="{StaticResource Brush-White}"
+               Stroke="{StaticResource Brush-Grey-04}"
+               StrokeThickness="1" />
 
-        <TextBlock Grid.Column="0" 
-                   TextWrapping="Wrap" 
-                   Margin="12,12">
-            This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect RowDefinition MinHeight="100"
-        </TextBlock>
-        <TextBlock Grid.Column="1" 
-                   Grid.Row="0" 
-                   TextWrapping="Wrap"
-                   Margin="12,12">
-            This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect
-        </TextBlock>
-        <TextBlock Grid.Column="2" 
-                   Grid.Row="0" 
-                   TextWrapping="Wrap" 
-                   Margin="12,12">
-            This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect
-        </TextBlock>
+    <TextBlock Grid.Column="0"
+               Margin="12,12"
+               TextWrapping="Wrap">
+      This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect RowDefinition MinHeight=&quot;100&quot;
+    </TextBlock>
+    <TextBlock Grid.Row="0"
+               Grid.Column="1"
+               Margin="12,12"
+               TextWrapping="Wrap">
+      This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect
+    </TextBlock>
+    <TextBlock Grid.Row="0"
+               Grid.Column="2"
+               Margin="12,12"
+               TextWrapping="Wrap">
+      This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect
+    </TextBlock>
 
-        <TextBlock Grid.Column="0"
-                   Grid.Row="2" 
-                   TextWrapping="Wrap"
-                   Margin="12,12">
-            This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect
-        </TextBlock>
-        <TextBlock Grid.Column="1" 
-                   Grid.Row="2" 
-                   TextWrapping="Wrap" 
-                   Margin="12,12">
-            This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect
-        </TextBlock>
-        <TextBlock Grid.Column="2"
-                   Grid.Row="2"
-                   TextWrapping="Wrap"
-                   Margin="12,12">
-            This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect
-        </TextBlock>
+    <TextBlock Grid.Row="2"
+               Grid.Column="0"
+               Margin="12,12"
+               TextWrapping="Wrap">
+      This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect
+    </TextBlock>
+    <TextBlock Grid.Row="2"
+               Grid.Column="1"
+               Margin="12,12"
+               TextWrapping="Wrap">
+      This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect
+    </TextBlock>
+    <TextBlock Grid.Row="2"
+               Grid.Column="2"
+               Margin="12,12"
+               TextWrapping="Wrap">
+      This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect
+    </TextBlock>
 
-        <!--Column Grid Splitter-->
-        <controls:GridSplitter 
-                Width="11"
-                GripperCursor="{Binding GripperCursor.Value,Mode=TwoWay}"
-                Background="{StaticResource Brush-Grey-04}"
-                HorizontalAlignment="{Binding HorizontalAlignment.Value,Mode=TwoWay}"
-                Grid.Column="{Binding Column.Value}"
-                GripperForeground="White"
-                ResizeDirection="{Binding ResizeDirection.Value,Mode=TwoWay}"
-                ResizeBehavior="{Binding ResizeBehavior.Value,Mode=TwoWay}"
-                CursorBehavior="{Binding CursorBehavior.Value,Mode=TwoWay}">
-        </controls:GridSplitter>
+    <!--  Column Grid Splitter  -->
+    <controls:GridSplitter Grid.Column="{Binding Column.Value}"
+                           Width="11"
+                           HorizontalAlignment="{Binding HorizontalAlignment.Value, Mode=TwoWay}"
+                           Background="{StaticResource Brush-Grey-04}"
+                           CursorBehavior="{Binding CursorBehavior.Value, Mode=TwoWay}"
+                           GripperCursor="{Binding GripperCursor.Value, Mode=TwoWay}"
+                           GripperForeground="White"
+                           ResizeBehavior="{Binding ResizeBehavior.Value, Mode=TwoWay}"
+                           ResizeDirection="{Binding ResizeDirection.Value, Mode=TwoWay}" />
 
-        <!--Row Grid Splitter-->
-        <controls:GridSplitter 
-            Grid.Row="1"
-            Grid.ColumnSpan="3"
-            Background="{StaticResource Brush-Grey-04}"
-            Height="11"
-            HorizontalAlignment="Stretch" >
-            <controls:GridSplitter.Element>
-                <TextBlock HorizontalAlignment="Center"     
-                                   VerticalAlignment="Center"  
-                                   Text="&#xE76F;"
-                                   Foreground="White" 
-                                   FontFamily="Segoe MDL2 Assets">
-                </TextBlock>
-            </controls:GridSplitter.Element>
-        </controls:GridSplitter>
+    <!--  Row Grid Splitter  -->
+    <controls:GridSplitter Grid.Row="1"
+                           Grid.ColumnSpan="3"
+                           Height="11"
+                           HorizontalAlignment="Stretch"
+                           Background="{StaticResource Brush-Grey-04}">
+      <controls:GridSplitter.Element>
+        <TextBlock HorizontalAlignment="Center"
+                   VerticalAlignment="Center"
+                   FontFamily="Segoe MDL2 Assets"
+                   Foreground="White"
+                   Text="&#xE76F;" />
+      </controls:GridSplitter.Element>
+    </controls:GridSplitter>
+    <VisualStateManager.VisualStateGroups>
+      <VisualStateGroup>
+        <VisualState x:Name="Full">
+          <VisualState.StateTriggers>
+            <AdaptiveTrigger MinWindowWidth="600" />
+          </VisualState.StateTriggers>
+        </VisualState>
+        <VisualState x:Name="Small">
+          <VisualState.StateTriggers>
+            <AdaptiveTrigger MinWindowWidth="0" />
+          </VisualState.StateTriggers>
 
-    </Grid>
+          <VisualState.Setters>
+            <Setter Target="RootGrid.Padding" Value="12" />
+            <Setter Target="RootGrid.FontSize" Value="12" />
+          </VisualState.Setters>
+        </VisualState>
+      </VisualStateGroup>
+    </VisualStateManager.VisualStateGroups>
+  </Grid>
 </Page>
