--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/HamburgerMenu/HamburgerMenuPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/HamburgerMenu/HamburgerMenuPage.xaml
@@ -1,96 +1,108 @@
-﻿<Page
-    x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.HamburgerMenuPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
-    mc:Ignorable="d">
-    <Page.Resources>
-        <DataTemplate x:Key="HamburgerMenuItem" x:DataType="controls:HamburgerMenuGlyphItem">
-            <Grid Width="240" Height="48">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="48" />
-                    <ColumnDefinition />
-                </Grid.ColumnDefinitions>
-                <FontIcon Grid.Column="0" 
-                          Margin="12,12,11,12" 
-                          FontFamily="Segoe MDL2 Assets" 
-                          Glyph="{Binding Glyph}"
-                          Foreground="White" />
-                <TextBlock Grid.Column="1" 
-                           Text="{x:Bind Label}" 
-                           Foreground="White" 
-                           FontSize="16" 
-                           VerticalAlignment="Center" />
-            </Grid>
-        </DataTemplate>
+﻿<Page x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.HamburgerMenuPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d">
+  <Page.Resources>
+    <DataTemplate x:Key="HamburgerMenuItem"
+                  x:DataType="controls:HamburgerMenuGlyphItem">
+      <Grid Width="240"
+            Height="48">
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="48" />
+          <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <FontIcon Grid.Column="0"
+                  Margin="12,12,11,12"
+                  FontFamily="Segoe MDL2 Assets"
+                  Foreground="White"
+                  Glyph="{Binding Glyph}" />
+        <TextBlock Grid.Column="1"
+                   VerticalAlignment="Center"
+                   FontSize="16"
+                   Foreground="White"
+                   Text="{x:Bind Label}" />
+      </Grid>
+    </DataTemplate>
 
-        <DataTemplate x:Key="HamburgerMenuImageItem" x:DataType="controls:HamburgerMenuGlyphItem">
-            <Grid Width="240" Height="48">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="48" />
-                    <ColumnDefinition />
-                </Grid.ColumnDefinitions>
-                <Image Source="{Binding Glyph}" 
-                       Stretch="UniformToFill" 
-                       Margin="12,12,11,12" />
-                <TextBlock Grid.Column="1" 
-                           Text="{x:Bind Label}" 
-                           Foreground="White" 
-                           FontSize="16" 
-                           VerticalAlignment="Center" />
-            </Grid>
-        </DataTemplate>
-    </Page.Resources>
+    <DataTemplate x:Key="HamburgerMenuImageItem"
+                  x:DataType="controls:HamburgerMenuGlyphItem">
+      <Grid Width="240"
+            Height="48">
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="48" />
+          <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <Image Margin="12,12,11,12"
+               Source="{Binding Glyph}"
+               Stretch="UniformToFill" />
+        <TextBlock Grid.Column="1"
+                   VerticalAlignment="Center"
+                   FontSize="16"
+                   Foreground="White"
+                   Text="{x:Bind Label}" />
+      </Grid>
+    </DataTemplate>
+  </Page.Resources>
 
-    <Grid Background="{StaticResource Brush-Grey-05}" Padding="50">
-        <controls:HamburgerMenu PaneBackground="{Binding PaneBackground.Value}" x:Name="HamburgerMenuControl"
-                                Foreground="White"
-                                ItemTemplate="{StaticResource HamburgerMenuImageItem}"
-                                OptionsItemTemplate="{StaticResource HamburgerMenuItem}"
-                                ItemClick="HamburgerMenu_OnItemClick"
-                                OptionsItemClick="HamburgerMenu_OnOptionsItemClick"
-                                OpenPaneLength="{Binding OpenPaneLength.Value}"
-                                DisplayMode="{Binding DisplayMode.Value}"
-                                CompactPaneLength="{Binding CompactPaneLength.Value}"
-                                HamburgerWidth="48"
-                                HamburgerHeight="{Binding HamburgerHeight.Value}"
-                                IsPaneOpen="{Binding IsPaneOpen.Value, Mode=TwoWay}"
-                                >
-            <!--Items-->
-            <controls:HamburgerMenu.ItemsSource>
-                <controls:HamburgerMenuItemCollection>
-                    <controls:HamburgerMenuGlyphItem Label="Big four summer heat" Glyph="/Assets/Photos/BigFourSummerHeat.png"/>
-                    <controls:HamburgerMenuGlyphItem Label="Bison badlands Chillin" Glyph="/Assets/Photos/BisonBadlandsChillin.png"/>
-                    <controls:HamburgerMenuGlyphItem Label="Giant slab in Oregon" Glyph="/Assets/Photos/GiantSlabInOregon.png"/>
-                    <controls:HamburgerMenuGlyphItem Label="Lake Ann Mushroom" Glyph="/Assets/Photos/LakeAnnMushroom.png"/>
-                </controls:HamburgerMenuItemCollection>
-            </controls:HamburgerMenu.ItemsSource>            
-            
-            <!--Options-->
-            <controls:HamburgerMenu.OptionsItemsSource>
-                <controls:HamburgerMenuItemCollection>
-                    <controls:HamburgerMenuGlyphItem Label="About" Glyph=""/>
-                </controls:HamburgerMenuItemCollection>
-            </controls:HamburgerMenu.OptionsItemsSource>
-            
-            <!--Content-->
-            <Grid x:Name="ContentGrid">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="48" />
-                    <RowDefinition />
-                </Grid.RowDefinitions>
-                <Border Background="Black" Grid.Row="0">
-                    <TextBlock x:Name="Header" 
-                               FontSize="24" 
-                               HorizontalAlignment="Center" 
-                               VerticalAlignment="Center" 
-                               Text="{Binding Label}" 
-                               Foreground="White"/>
-                </Border>
-                <Image x:Name="Image" Grid.Row="1" Source="{Binding Glyph}" />
-            </Grid>
-        </controls:HamburgerMenu>
-    </Grid>
+  <Grid Padding="50"
+        Background="{StaticResource Brush-Grey-05}">
+    <controls:HamburgerMenu x:Name="HamburgerMenuControl"
+                            CompactPaneLength="{Binding CompactPaneLength.Value}"
+                            DisplayMode="{Binding DisplayMode.Value}"
+                            Foreground="White"
+                            HamburgerHeight="{Binding HamburgerHeight.Value}"
+                            HamburgerWidth="48"
+                            IsPaneOpen="{Binding IsPaneOpen.Value, Mode=TwoWay}"
+                            ItemClick="HamburgerMenu_OnItemClick"
+                            ItemTemplate="{StaticResource HamburgerMenuImageItem}"
+                            OpenPaneLength="{Binding OpenPaneLength.Value}"
+                            OptionsItemClick="HamburgerMenu_OnOptionsItemClick"
+                            OptionsItemTemplate="{StaticResource HamburgerMenuItem}"
+                            PaneBackground="{Binding PaneBackground.Value}">
+      <!--  Items  -->
+      <controls:HamburgerMenu.ItemsSource>
+        <controls:HamburgerMenuItemCollection>
+          <controls:HamburgerMenuGlyphItem Glyph="/Assets/Photos/BigFourSummerHeat.png"
+                                           Label="Big four summer heat" />
+          <controls:HamburgerMenuGlyphItem Glyph="/Assets/Photos/BisonBadlandsChillin.png"
+                                           Label="Bison badlands Chillin" />
+          <controls:HamburgerMenuGlyphItem Glyph="/Assets/Photos/GiantSlabInOregon.png"
+                                           Label="Giant slab in Oregon" />
+          <controls:HamburgerMenuGlyphItem Glyph="/Assets/Photos/LakeAnnMushroom.png"
+                                           Label="Lake Ann Mushroom" />
+        </controls:HamburgerMenuItemCollection>
+      </controls:HamburgerMenu.ItemsSource>
+
+      <!--  Options  -->
+      <controls:HamburgerMenu.OptionsItemsSource>
+        <controls:HamburgerMenuItemCollection>
+          <controls:HamburgerMenuGlyphItem Glyph=""
+                                           Label="About" />
+        </controls:HamburgerMenuItemCollection>
+      </controls:HamburgerMenu.OptionsItemsSource>
+
+      <!--  Content  -->
+      <Grid x:Name="ContentGrid">
+        <Grid.RowDefinitions>
+          <RowDefinition Height="48" />
+          <RowDefinition />
+        </Grid.RowDefinitions>
+        <Border Grid.Row="0"
+                Background="Black">
+          <TextBlock x:Name="Header"
+                     HorizontalAlignment="Center"
+                     VerticalAlignment="Center"
+                     FontSize="24"
+                     Foreground="White"
+                     Text="{Binding Label}" />
+        </Border>
+        <Image x:Name="Image"
+               Grid.Row="1"
+               Source="{Binding Glyph}" />
+      </Grid>
+    </controls:HamburgerMenu>
+  </Grid>
 </Page>
