--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Offset/OffsetBehaviorPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Offset/OffsetBehaviorPage.xaml
@@ -1,36 +1,39 @@
-﻿<Page
-    x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.OffsetBehaviorPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages.OffsetBehavior"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
-    xmlns:behaviors="using:Microsoft.Toolkit.Uwp.UI.Animations.Behaviors"
-    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
-    mc:Ignorable="d">
+﻿<Page x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.OffsetBehaviorPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:behaviors="using:Microsoft.Toolkit.Uwp.UI.Animations.Behaviors"
+      xmlns:core="using:Microsoft.Xaml.Interactions.Core"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
+      xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages.OffsetBehavior"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Image x:Name="ToolkitLogo" Source="ms-appx:///Assets/ToolkitLogo.png" Height="100" Width="100" >
-            <interactivity:Interaction.Behaviors>
-                <behaviors:Offset x:Name="Offset" 
-                                  OffsetX="{Binding OffsetX.Value, Mode=OneWay}" 
-                                  OffsetY="{Binding OffsetY.Value, Mode=OneWay}" 
-                                  Duration="{Binding Duration.Value, Mode=OneWay}" 
-                                  Delay="{Binding Delay.Value, Mode=OneWay}" 
-                                  AutomaticallyStart="{Binding AutomaticallyStart.Value, Mode=OneWay}"/>
-            </interactivity:Interaction.Behaviors>
-        </Image>
-        <StackPanel HorizontalAlignment="Right" VerticalAlignment="Bottom">
-            <Button Content="Apply" Margin="10">
-                <interactivity:Interaction.Behaviors>
-                    <core:EventTriggerBehavior EventName="Click">
-                        <core:CallMethodAction 
-                            TargetObject="{Binding ElementName=Offset}" 
-                            MethodName="StartAnimation"/>
-                    </core:EventTriggerBehavior>
-                </interactivity:Interaction.Behaviors>
-            </Button>
-        </StackPanel>
-    </Grid>
+  <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Image x:Name="ToolkitLogo"
+           Width="100"
+           Height="100"
+           Source="ms-appx:///Assets/ToolkitLogo.png">
+      <interactivity:Interaction.Behaviors>
+        <behaviors:Offset x:Name="Offset"
+                          AutomaticallyStart="{Binding AutomaticallyStart.Value, Mode=OneWay}"
+                          Delay="{Binding Delay.Value, Mode=OneWay}"
+                          OffsetX="{Binding OffsetX.Value, Mode=OneWay}"
+                          OffsetY="{Binding OffsetY.Value, Mode=OneWay}"
+                          Duration="{Binding Duration.Value, Mode=OneWay}" />
+      </interactivity:Interaction.Behaviors>
+    </Image>
+    <StackPanel HorizontalAlignment="Right"
+                VerticalAlignment="Bottom">
+      <Button Margin="10"
+              Content="Apply">
+        <interactivity:Interaction.Behaviors>
+          <core:EventTriggerBehavior EventName="Click">
+            <core:CallMethodAction MethodName="StartAnimation"
+                                   TargetObject="{Binding ElementName=Offset}" />
+          </core:EventTriggerBehavior>
+        </interactivity:Interaction.Behaviors>
+      </Button>
+    </StackPanel>
+  </Grid>
 </Page>
