--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/RadialGauge/RadialGaugePage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/RadialGauge/RadialGaugePage.xaml
@@ -6,32 +6,32 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d">
 
-    <Grid Background="{StaticResource Brush-Grey-05}">
-        <Grid VerticalAlignment="Center"
-              HorizontalAlignment="Center">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="50" />
-                <ColumnDefinition Width="250" />
-                <ColumnDefinition Width="50" />
-            </Grid.ColumnDefinitions>
-            <controls:RadialGauge x:Name="RadialGaugeControl"
-                                  Grid.Column="1"
-                                  Value="{Binding Value.Value, Mode=TwoWay}"
-                                  Minimum="0"
-                                  Maximum="180"
-                                  StepSize="1"
-                                  IsInteractive="{Binding IsInteractive.Value, Mode=OneWay}"
-                                  TickSpacing="{Binding TickSpacing.Value, Mode=OneWay}"
-                                  ScaleWidth="{Binding ScaleWidth.Value, Mode=OneWay}"
-                                  MinAngle="-150"
-                                  MaxAngle="{Binding MaxAngle.Value, Mode=OneWay}"
-                                  Unit="Units"
-                                  TickBrush="Gainsboro"
-                                  ScaleTickBrush="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-                                  UnitBrush="Black"
-                                  ValueBrush="Black"
-                                  NeedleWidth="{Binding NeedleWidth.Value, Mode=OneWay}"
-                                  TickLength="{Binding TickLength.Value, Mode=OneWay}" />
-        </Grid>
+  <Grid Background="{StaticResource Brush-Grey-05}">
+    <Grid HorizontalAlignment="Center"
+          VerticalAlignment="Center">
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="50" />
+        <ColumnDefinition Width="250" />
+        <ColumnDefinition Width="50" />
+      </Grid.ColumnDefinitions>
+      <controls:RadialGauge x:Name="RadialGaugeControl"
+                            Grid.Column="1"
+                            IsInteractive="{Binding IsInteractive.Value, Mode=OneWay}"
+                            MaxAngle="{Binding MaxAngle.Value, Mode=OneWay}"
+                            Maximum="180"
+                            MinAngle="-150"
+                            Minimum="0"
+                            NeedleWidth="{Binding NeedleWidth.Value, Mode=OneWay}"
+                            ScaleTickBrush="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+                            ScaleWidth="{Binding ScaleWidth.Value, Mode=OneWay}"
+                            StepSize="1"
+                            TickBrush="Gainsboro"
+                            TickLength="{Binding TickLength.Value, Mode=OneWay}"
+                            TickSpacing="{Binding TickSpacing.Value, Mode=OneWay}"
+                            Unit="Units"
+                            UnitBrush="Black"
+                            ValueBrush="Black"
+                            Value="{Binding Value.Value, Mode=TwoWay}" />
     </Grid>
+  </Grid>
 </Page>
