--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/RangeSelector/RangeSelectorPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/RangeSelector/RangeSelectorPage.xaml
@@ -1,32 +1,37 @@
-﻿<Page
-    x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.RangeSelectorPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.Pages"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
-    xmlns:converters="using:Microsoft.Toolkit.Uwp.UI.Converters"
-    mc:Ignorable="d">
-    <Page.Resources>
-        <converters:StringFormatConverter x:Key="StringFormatConverter"/>
-    </Page.Resources>
+﻿<Page x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.RangeSelectorPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
+      xmlns:converters="using:Microsoft.Toolkit.Uwp.UI.Converters"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.Pages"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d">
+  <Page.Resources>
+    <converters:StringFormatConverter x:Key="StringFormatConverter" />
+  </Page.Resources>
 
-    <Grid Background="{StaticResource Brush-Grey-05}">
-        <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="50" />
-                <ColumnDefinition Width="200" />
-                <ColumnDefinition Width="50" />
-            </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0" Text="{Binding RangeMin, ElementName=RangeSelectorControl, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0:0.##}'}" 
-                       Foreground="Black" HorizontalAlignment="Left"/>
-            <controls:RangeSelector x:Name="RangeSelectorControl" Grid.Column="1"
-                 Minimum="{Binding Minimum.Value, Mode=TwoWay}" 
-                 Maximum="{Binding Maximum.Value, Mode=TwoWay}" />
-            <TextBlock Grid.Column="2" Text="{Binding RangeMax, ElementName=RangeSelectorControl, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0:0.##}'}"
-                       Foreground="Black"  HorizontalAlignment="Right"/>
-        </Grid>
-        
+  <Grid Background="{StaticResource Brush-Grey-05}">
+    <Grid HorizontalAlignment="Center"
+          VerticalAlignment="Center">
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="50" />
+        <ColumnDefinition Width="200" />
+        <ColumnDefinition Width="50" />
+      </Grid.ColumnDefinitions>
+      <TextBlock Grid.Column="0"
+                 HorizontalAlignment="Left"
+                 Foreground="Black"
+                 Text="{Binding RangeMin, ElementName=RangeSelectorControl, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0:0.##}'}" />
+      <controls:RangeSelector x:Name="RangeSelectorControl"
+                              Grid.Column="1"
+                              Maximum="{Binding Maximum.Value, Mode=TwoWay}"
+                              Minimum="{Binding Minimum.Value, Mode=TwoWay}" />
+      <TextBlock Grid.Column="2"
+                 HorizontalAlignment="Right"
+                 Foreground="Black"
+                 Text="{Binding RangeMax, ElementName=RangeSelectorControl, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0:0.##}'}" />
     </Grid>
+
+  </Grid>
 </Page>
