--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/SystemInformation/SystemInformationPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/SystemInformation/SystemInformationPage.xaml
@@ -1,144 +1,164 @@
-﻿<Page
-    x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.SystemInformationPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
-    <Grid Background="{StaticResource Brush-Grey-05}">
-        <VisualStateManager.VisualStateGroups>
-            <VisualStateGroup>
-                <VisualState x:Name="Full">
-                    <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="600" />
-                    </VisualState.StateTriggers>
-                </VisualState>
-                <VisualState x:Name="Small">
-                    <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="0" />
-                    </VisualState.StateTriggers>
+﻿<Page x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.SystemInformationPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d">
+  <Grid Background="{StaticResource Brush-Grey-05}">
+    <ScrollViewer HorizontalScrollMode="Disabled"
+                  VerticalScrollBarVisibility="Auto"
+                  VerticalScrollMode="Auto">
+      <StackPanel HorizontalAlignment="Center"
+                  VerticalAlignment="Center">
+        <StackPanel x:Name="Stack0"
+                    Margin="10"
+                    Orientation="Horizontal">
+          <TextBlock FontSize="18"
+                     FontWeight="Bold"
+                     Text="Application name:"
+                     TextWrapping="Wrap" />
+          <TextBlock Margin="20,0"
+                     FontSize="18"
+                     Text="{x:Bind ApplicationName}"
+                     TextWrapping="Wrap" />
+        </StackPanel>
+        <StackPanel x:Name="Stack1"
+                    Margin="10"
+                    Orientation="Horizontal">
+          <TextBlock FontSize="18"
+                     FontWeight="Bold"
+                     Text="Application version:"
+                     TextWrapping="Wrap" />
+          <TextBlock Margin="20,0"
+                     FontSize="18"
+                     Text="{x:Bind ApplicationVersion}"
+                     TextWrapping="Wrap" />
+        </StackPanel>
+        <StackPanel x:Name="Stack2"
+                    Margin="10"
+                    Orientation="Horizontal">
+          <TextBlock FontSize="18"
+                     FontWeight="Bold"
+                     Text="User's culture:"
+                     TextWrapping="Wrap" />
+          <TextBlock Margin="20,0"
+                     FontSize="18"
+                     Text="{x:Bind Culture}"
+                     TextWrapping="Wrap" />
+        </StackPanel>
+        <StackPanel x:Name="Stack3"
+                    Margin="10"
+                    Orientation="Horizontal">
+          <TextBlock FontSize="18"
+                     FontWeight="Bold"
+                     Text="Operating system:"
+                     TextWrapping="Wrap" />
+          <TextBlock Margin="20,0"
+                     FontSize="18"
+                     Text="{x:Bind OperatingSystem}"
+                     TextWrapping="Wrap" />
+        </StackPanel>
+        <StackPanel x:Name="Stack4"
+                    Margin="10"
+                    Orientation="Horizontal">
+          <TextBlock FontSize="18"
+                     FontWeight="Bold"
+                     Text="Operating system architecture:"
+                     TextWrapping="Wrap" />
+          <TextBlock Margin="20,0"
+                     FontSize="18"
+                     Text="{x:Bind OperatingSystemArchitecture}"
+                     TextWrapping="Wrap" />
+        </StackPanel>
+        <StackPanel x:Name="Stack5"
+                    Margin="10"
+                    Orientation="Horizontal">
+          <TextBlock FontSize="18"
+                     FontWeight="Bold"
+                     Text="Operating system version:"
+                     TextWrapping="Wrap" />
+          <TextBlock Margin="20,0"
+                     FontSize="18"
+                     Text="{x:Bind OperatingSystemVersion}"
+                     TextWrapping="Wrap" />
+        </StackPanel>
+        <StackPanel x:Name="Stack6"
+                    Margin="10"
+                    Orientation="Horizontal">
+          <TextBlock FontSize="18"
+                     FontWeight="Bold"
+                     Text="Device family:"
+                     TextWrapping="Wrap" />
+          <TextBlock Margin="20,0"
+                     FontSize="18"
+                     Text="{x:Bind DeviceFamily}"
+                     TextWrapping="Wrap" />
+        </StackPanel>
+        <StackPanel x:Name="Stack7"
+                    Margin="10"
+                    Orientation="Horizontal">
+          <TextBlock FontSize="18"
+                     FontWeight="Bold"
+                     Text="Device model:"
+                     TextWrapping="Wrap" />
+          <TextBlock Margin="20,0"
+                     FontSize="18"
+                     Text="{x:Bind DeviceModel}"
+                     TextWrapping="Wrap" />
+        </StackPanel>
+        <StackPanel x:Name="Stack8"
+                    Margin="10"
+                    Orientation="Horizontal">
+          <TextBlock FontSize="18"
+                     FontWeight="Bold"
+                     Text="Device manufacturer:"
+                     TextWrapping="Wrap" />
+          <TextBlock Margin="20,0"
+                     FontSize="18"
+                     Text="{x:Bind DeviceManufacturer}"
+                     TextWrapping="Wrap" />
+        </StackPanel>
+        <StackPanel x:Name="Stack9"
+                    Margin="10"
+                    Orientation="Horizontal">
+          <TextBlock FontSize="18"
+                     FontWeight="Bold"
+                     Text="Available memory (MB):"
+                     TextWrapping="Wrap" />
+          <TextBlock Margin="20,0"
+                     FontSize="18"
+                     Text="{x:Bind AvailableMemory}"
+                     TextWrapping="Wrap" />
+        </StackPanel>
+      </StackPanel>
+    </ScrollViewer>
+    <VisualStateManager.VisualStateGroups>
+      <VisualStateGroup>
+        <VisualState x:Name="Full">
+          <VisualState.StateTriggers>
+            <AdaptiveTrigger MinWindowWidth="600" />
+          </VisualState.StateTriggers>
+        </VisualState>
+        <VisualState x:Name="Small">
+          <VisualState.StateTriggers>
+            <AdaptiveTrigger MinWindowWidth="0" />
+          </VisualState.StateTriggers>
 
-                    <VisualState.Setters>
-                        <Setter Target="Stack0.Orientation"  Value="Vertical"/>
-                        <Setter Target="Stack1.Orientation"  Value="Vertical"/>
-                        <Setter Target="Stack2.Orientation"  Value="Vertical"/>
-                        <Setter Target="Stack3.Orientation"  Value="Vertical"/>
-                        <Setter Target="Stack4.Orientation"  Value="Vertical"/>
-                        <Setter Target="Stack5.Orientation"  Value="Vertical"/>
-                        <Setter Target="Stack6.Orientation"  Value="Vertical"/>
-                        <Setter Target="Stack7.Orientation"  Value="Vertical"/>
-                        <Setter Target="Stack8.Orientation"  Value="Vertical"/>
-                        <Setter Target="Stack9.Orientation"  Value="Vertical"/>
-                    </VisualState.Setters>
-                </VisualState>
-            </VisualStateGroup>
-        </VisualStateManager.VisualStateGroups>
-        <ScrollViewer HorizontalScrollMode="Disabled" 
-                      VerticalScrollMode="Auto" 
-                      VerticalScrollBarVisibility="Auto">
-            <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-                <StackPanel x:Name="Stack0" Orientation="Horizontal" Margin="10">
-                    <TextBlock Text="Application name:" 
-                           FontSize="18" 
-                           FontWeight="Bold" 
-                           TextWrapping="Wrap"/>
-                    <TextBlock Text="{x:Bind ApplicationName}" 
-                               TextWrapping="Wrap"
-                               Margin="20,0" 
-                               FontSize="18"/>
-                </StackPanel>
-                <StackPanel x:Name="Stack1" Orientation="Horizontal" Margin="10">
-                    <TextBlock Text="Application version:" 
-                           FontSize="18" 
-                           FontWeight="Bold" 
-                           TextWrapping="Wrap"/>
-                    <TextBlock Text="{x:Bind ApplicationVersion}" 
-                               TextWrapping="Wrap"
-                               Margin="20,0" 
-                               FontSize="18"/>
-                </StackPanel>
-                <StackPanel x:Name="Stack2" Orientation="Horizontal" Margin="10">
-                    <TextBlock Text="User's culture:" 
-                           FontSize="18" 
-                           FontWeight="Bold"
-                           TextWrapping="Wrap"/>
-                    <TextBlock Text="{x:Bind Culture}" 
-                               TextWrapping="Wrap"
-                               Margin="20,0" 
-                               FontSize="18"/>
-                </StackPanel>
-                <StackPanel x:Name="Stack3" Orientation="Horizontal" Margin="10">
-                    <TextBlock Text="Operating system:" 
-                           FontSize="18" 
-                           FontWeight="Bold"
-                           TextWrapping="Wrap"/>
-                    <TextBlock Text="{x:Bind OperatingSystem}" 
-                               TextWrapping="Wrap"
-                               Margin="20,0" 
-                               FontSize="18"/>
-                </StackPanel>
-                <StackPanel x:Name="Stack4" Orientation="Horizontal" Margin="10">
-                    <TextBlock Text="Operating system architecture:" 
-                           FontSize="18" 
-                           FontWeight="Bold"
-                           TextWrapping="Wrap"/>
-                    <TextBlock Text="{x:Bind OperatingSystemArchitecture}" 
-                               TextWrapping="Wrap"
-                               Margin="20,0" 
-                               FontSize="18"/>
-                </StackPanel>
-                <StackPanel x:Name="Stack5" Orientation="Horizontal" Margin="10">
-                    <TextBlock Text="Operating system version:" 
-                           FontSize="18" 
-                           FontWeight="Bold"
-                           TextWrapping="Wrap"/>
-                    <TextBlock Text="{x:Bind OperatingSystemVersion}" 
-                               TextWrapping="Wrap"
-                               Margin="20,0" 
-                               FontSize="18"/>
-                </StackPanel>
-                <StackPanel x:Name="Stack6" Orientation="Horizontal" Margin="10">
-                    <TextBlock Text="Device family:" 
-                           FontSize="18" 
-                           FontWeight="Bold"
-                           TextWrapping="Wrap"/>
-                    <TextBlock Text="{x:Bind DeviceFamily}" 
-                               TextWrapping="Wrap"
-                               Margin="20,0" 
-                               FontSize="18"/>
-                </StackPanel>
-                <StackPanel x:Name="Stack7" Orientation="Horizontal" Margin="10">
-                    <TextBlock Text="Device model:" 
-                           FontSize="18" 
-                           FontWeight="Bold"
-                           TextWrapping="Wrap"/>
-                    <TextBlock Text="{x:Bind DeviceModel}" 
-                               TextWrapping="Wrap"
-                               Margin="20,0" 
-                               FontSize="18"/>
-                </StackPanel>
-                <StackPanel x:Name="Stack8" Orientation="Horizontal" Margin="10">
-                    <TextBlock Text="Device manufacturer:" 
-                           FontSize="18" 
-                           FontWeight="Bold"
-                           TextWrapping="Wrap"/>
-                    <TextBlock Text="{x:Bind DeviceManufacturer}" 
-                               TextWrapping="Wrap"
-                               Margin="20,0" 
-                               FontSize="18"/>
-                </StackPanel>
-                <StackPanel x:Name="Stack9" Orientation="Horizontal" Margin="10">
-                    <TextBlock Text="Available memory (MB):" 
-                           FontSize="18" 
-                           FontWeight="Bold"
-                           TextWrapping="Wrap"/>
-                    <TextBlock Text="{x:Bind AvailableMemory}" 
-                               TextWrapping="Wrap"
-                               Margin="20,0" 
-                               FontSize="18"/>
-                </StackPanel>
-            </StackPanel>
-        </ScrollViewer>
-    </Grid>
+          <VisualState.Setters>
+            <Setter Target="Stack0.Orientation" Value="Vertical" />
+            <Setter Target="Stack1.Orientation" Value="Vertical" />
+            <Setter Target="Stack2.Orientation" Value="Vertical" />
+            <Setter Target="Stack3.Orientation" Value="Vertical" />
+            <Setter Target="Stack4.Orientation" Value="Vertical" />
+            <Setter Target="Stack5.Orientation" Value="Vertical" />
+            <Setter Target="Stack6.Orientation" Value="Vertical" />
+            <Setter Target="Stack7.Orientation" Value="Vertical" />
+            <Setter Target="Stack8.Orientation" Value="Vertical" />
+            <Setter Target="Stack9.Orientation" Value="Vertical" />
+          </VisualState.Setters>
+        </VisualState>
+      </VisualStateGroup>
+    </VisualStateManager.VisualStateGroups>
+  </Grid>
 </Page>
