--- a/Microsoft.Toolkit.Uwp.UI.Controls/RangeSelector/RangeSelector.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/RangeSelector/RangeSelector.xaml
@@ -1,116 +1,141 @@
-﻿<ResourceDictionary
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls">
 
-    <Style TargetType="controls:RangeSelector" >
-        <Setter Property="Background" Value="{ThemeResource SystemControlForegroundBaseMediumLowBrush}"/>
-        <Setter Property="Foreground" Value="{ThemeResource SystemControlHighlightAccentBrush}"/>
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="controls:RangeSelector">
-                    <Grid Height="24">
-                        <Grid.Resources>
-                            <Style x:Key="SliderThumbStyle" TargetType="Thumb">
-                                <Setter Property="UseSystemFocusVisuals" Value="True"/>
-                                <Setter Property="BorderThickness" Value="0"/>
-                                <Setter Property="Background" Value="{ThemeResource SystemControlForegroundAccentBrush}"/>
-                                <Setter Property="RenderTransform">
-                                    <Setter.Value>
-                                        <TranslateTransform X="-8" />
-                                    </Setter.Value>
-                                </Setter>
-                                <Setter Property="Template">
-                                    <Setter.Value>
-                                        <ControlTemplate TargetType="Thumb">
-                                            <Border BorderBrush="{TemplateBinding BorderBrush}"
-                                                        BorderThickness="{TemplateBinding BorderThickness}" 
-                                                        Background="{TemplateBinding Background}" 
-                                                        CornerRadius="4"
-                                                        Width="8"
-                                                        Height="24"
-                                                        HorizontalAlignment="Center"/>
-                                        </ControlTemplate>
-                                    </Setter.Value>
-                                </Setter>
-                            </Style>
-                        </Grid.Resources>
-                        <VisualStateManager.VisualStateGroups>
-                            <VisualStateGroup x:Name="CommonStates">
-                                <VisualState x:Name="Normal"/>
-                                <VisualState x:Name="MinPressed">
-                                    <Storyboard>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background" Storyboard.TargetName="MinThumb">
-                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SystemControlHighlightChromeHighBrush}"/>
-                                        </ObjectAnimationUsingKeyFrames>
-                                    </Storyboard>
-                                </VisualState>
+  <Style TargetType="controls:RangeSelector">
+    <Setter Property="Background" Value="{ThemeResource SystemControlForegroundBaseMediumLowBrush}" />
+    <Setter Property="Foreground" Value="{ThemeResource SystemControlHighlightAccentBrush}" />
+    <Setter Property="Template">
+      <Setter.Value>
+        <ControlTemplate TargetType="controls:RangeSelector">
+          <Grid Height="24">
+            <Grid.Resources>
+              <Style x:Key="SliderThumbStyle"
+                     TargetType="Thumb">
+                <Setter Property="UseSystemFocusVisuals" Value="True" />
+                <Setter Property="BorderThickness" Value="0" />
+                <Setter Property="Background" Value="{ThemeResource SystemControlForegroundAccentBrush}" />
+                <Setter Property="RenderTransform">
+                  <Setter.Value>
+                    <TranslateTransform X="-8" />
+                  </Setter.Value>
+                </Setter>
+                <Setter Property="Template">
+                  <Setter.Value>
+                    <ControlTemplate TargetType="Thumb">
+                      <Border Width="8"
+                              Height="24"
+                              HorizontalAlignment="Center"
+                              Background="{TemplateBinding Background}"
+                              BorderBrush="{TemplateBinding BorderBrush}"
+                              BorderThickness="{TemplateBinding BorderThickness}"
+                              CornerRadius="4" />
+                    </ControlTemplate>
+                  </Setter.Value>
+                </Setter>
+              </Style>
+            </Grid.Resources>
 
-                                <VisualState x:Name="MaxPressed">
-                                    <Storyboard>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background" Storyboard.TargetName="MaxThumb">
-                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SystemControlHighlightChromeHighBrush}"/>
-                                        </ObjectAnimationUsingKeyFrames>
-                                    </Storyboard>
-                                </VisualState>
-                                <VisualState x:Name="Disabled">
-                                    <Storyboard>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Fill" Storyboard.TargetName="BackgroundElement">
-                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SystemControlDisabledBaseLowBrush}"/>
-                                        </ObjectAnimationUsingKeyFrames>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Fill" Storyboard.TargetName="ActiveRectangle">
-                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SystemControlDisabledBaseLowBrush}"/>
-                                        </ObjectAnimationUsingKeyFrames>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background" Storyboard.TargetName="MinThumb">
-                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SystemControlDisabledChromeDisabledHighBrush}"/>
-                                        </ObjectAnimationUsingKeyFrames>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background" Storyboard.TargetName="MaxThumb">
-                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SystemControlDisabledChromeDisabledHighBrush}"/>
-                                        </ObjectAnimationUsingKeyFrames>
-                                    </Storyboard>
-                                </VisualState>
+            <Border x:Name="OutOfRangeContentContainer"
+                    Height="24"
+                    Margin="12,0"
+                    Background="Transparent">
+              <Rectangle x:Name="BackgroundElement"
+                         Height="2"
+                         Fill="{TemplateBinding Background}" />
+            </Border>
+            <Canvas x:Name="ContainerCanvas"
+                    Margin="12,0"
+                    Background="Transparent">
+              <Rectangle x:Name="ActiveRectangle"
+                         Canvas.Top="11"
+                         Height="2"
+                         Fill="{TemplateBinding Foreground}" />
+              <Thumb x:Name="MinThumb"
+                     AutomationProperties.Name="Min thumb"
+                     Background="{TemplateBinding Foreground}"
+                     IsTabStop="True"
+                     Style="{StaticResource SliderThumbStyle}"
+                     TabIndex="0" />
+              <Thumb x:Name="MaxThumb"
+                     AutomationProperties.Name="Max thumb"
+                     Background="{TemplateBinding Foreground}"
+                     IsTabStop="True"
+                     Style="{StaticResource SliderThumbStyle}"
+                     TabIndex="1" />
+            </Canvas>
+            <VisualStateManager.VisualStateGroups>
+              <VisualStateGroup x:Name="CommonStates">
+                <VisualState x:Name="Normal" />
+                <VisualState x:Name="MinPressed">
+                  <Storyboard>
+                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="MinThumb"
+                                                   Storyboard.TargetProperty="Background">
+                      <DiscreteObjectKeyFrame KeyTime="0"
+                                              Value="{ThemeResource SystemControlHighlightChromeHighBrush}" />
+                    </ObjectAnimationUsingKeyFrames>
+                  </Storyboard>
+                </VisualState>
 
-                                <VisualState x:Name="PointerOver">
-                                    <Storyboard>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="BackgroundElement"
-                                           Storyboard.TargetProperty="Fill">
-                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SystemControlHighlightChromeAltLowBrush}" />
-                                        </ObjectAnimationUsingKeyFrames>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="MinThumb"
-                                           Storyboard.TargetProperty="Background">
-                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SystemControlHighlightChromeAltLowBrush}" />
-                                        </ObjectAnimationUsingKeyFrames>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="MaxThumb"
-                                           Storyboard.TargetProperty="Background">
-                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SystemControlHighlightChromeAltLowBrush}" />
-                                        </ObjectAnimationUsingKeyFrames>
-                                    </Storyboard>
-                                </VisualState>
-                            </VisualStateGroup>
-                        </VisualStateManager.VisualStateGroups>
+                <VisualState x:Name="MaxPressed">
+                  <Storyboard>
+                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="MaxThumb"
+                                                   Storyboard.TargetProperty="Background">
+                      <DiscreteObjectKeyFrame KeyTime="0"
+                                              Value="{ThemeResource SystemControlHighlightChromeHighBrush}" />
+                    </ObjectAnimationUsingKeyFrames>
+                  </Storyboard>
+                </VisualState>
+                <VisualState x:Name="Disabled">
+                  <Storyboard>
+                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="BackgroundElement"
+                                                   Storyboard.TargetProperty="Fill">
+                      <DiscreteObjectKeyFrame KeyTime="0"
+                                              Value="{ThemeResource SystemControlDisabledBaseLowBrush}" />
+                    </ObjectAnimationUsingKeyFrames>
+                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ActiveRectangle"
+                                                   Storyboard.TargetProperty="Fill">
+                      <DiscreteObjectKeyFrame KeyTime="0"
+                                              Value="{ThemeResource SystemControlDisabledBaseLowBrush}" />
+                    </ObjectAnimationUsingKeyFrames>
+                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="MinThumb"
+                                                   Storyboard.TargetProperty="Background">
+                      <DiscreteObjectKeyFrame KeyTime="0"
+                                              Value="{ThemeResource SystemControlDisabledChromeDisabledHighBrush}" />
+                    </ObjectAnimationUsingKeyFrames>
+                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="MaxThumb"
+                                                   Storyboard.TargetProperty="Background">
+                      <DiscreteObjectKeyFrame KeyTime="0"
+                                              Value="{ThemeResource SystemControlDisabledChromeDisabledHighBrush}" />
+                    </ObjectAnimationUsingKeyFrames>
+                  </Storyboard>
+                </VisualState>
 
-                        <Border x:Name="OutOfRangeContentContainer" Height="24" Background="Transparent" Margin="12,0">
-                            <Rectangle x:Name="BackgroundElement" Height="2" Fill="{TemplateBinding Background}" />
-                        </Border>
-                        <Canvas x:Name="ContainerCanvas" Margin="12,0" Background="Transparent">
-                            <Rectangle x:Name="ActiveRectangle" Fill="{TemplateBinding Foreground}" Height="2" Canvas.Top="11" />
-                            <Thumb x:Name="MinThumb" 
-                                   AutomationProperties.Name="Min thumb"
-                                   Background="{TemplateBinding Foreground}" 
-                                   Style="{StaticResource SliderThumbStyle}" 
-                                   IsTabStop="True" 
-                                   TabIndex="0"/>
-                            <Thumb x:Name="MaxThumb" 
-                                   AutomationProperties.Name="Max thumb"
-                                   Background="{TemplateBinding Foreground}" 
-                                   Style="{StaticResource SliderThumbStyle}"
-                                   IsTabStop="True" 
-                                   TabIndex="1"/>
-                        </Canvas>
-                    </Grid>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
+                <VisualState x:Name="PointerOver">
+                  <Storyboard>
+                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="BackgroundElement"
+                                                   Storyboard.TargetProperty="Fill">
+                      <DiscreteObjectKeyFrame KeyTime="0"
+                                              Value="{ThemeResource SystemControlHighlightChromeAltLowBrush}" />
+                    </ObjectAnimationUsingKeyFrames>
+                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="MinThumb"
+                                                   Storyboard.TargetProperty="Background">
+                      <DiscreteObjectKeyFrame KeyTime="0"
+                                              Value="{ThemeResource SystemControlHighlightChromeAltLowBrush}" />
+                    </ObjectAnimationUsingKeyFrames>
+                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="MaxThumb"
+                                                   Storyboard.TargetProperty="Background">
+                      <DiscreteObjectKeyFrame KeyTime="0"
+                                              Value="{ThemeResource SystemControlHighlightChromeAltLowBrush}" />
+                    </ObjectAnimationUsingKeyFrames>
+                  </Storyboard>
+                </VisualState>
+              </VisualStateGroup>
+            </VisualStateManager.VisualStateGroups>
+          </Grid>
+        </ControlTemplate>
+      </Setter.Value>
+    </Setter>
+  </Style>
 </ResourceDictionary>
- 
+
