--- a/UnitTests/UnitTestApp.xaml
+++ b/UnitTests/UnitTestApp.xaml
@@ -1,8 +1,5 @@
-﻿<Application
-    x:Class="UnitTests.App"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:UnitTests"
-    RequestedTheme="Light">
-
-</Application>
+﻿<Application x:Class="UnitTests.App"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="using:UnitTests"
+             RequestedTheme="Light" />
